# PointRenderer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
shaders/: FragmentShader.glsl  VertexShader.glsl
source/: Source.cpp
source/include/: ShaderHandler.cpp  ShaderHandler.h  Utility.cpp  Utility.h
source/render/: Renderer.cpp  Renderer.h
source/rendering/: IndexBuffer.h  VertexArray.h
source/shader/: Shader.cpp  Shader.h
source/shading/: Shader.cpp  Shader.h
source/texture/: Texture.cpp  Texture.h
source/vertex/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
